# emojifinder

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: release.yml
builder/: Cargo.toml
builder/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
finder/: Cargo.toml
finder/src/: main.rs  viewer.rs
finder/src/ui/: event.rs  mod.rs
finder/src/ui/tui/: event.rs  mod.rs  viewer.rs
finder/src/util/: event.rs
index/: Cargo.toml
index/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: main.rs
