[package]
name = "emojifinder-builder"
description = "Builds the index used by emojifinder"
version = "0.2.0"
authors = ["Arpad Ray <hello@arpad.pizza>"]
edition = "2021"
license = "MIT"
include = [
  "src/main.rs",
]

[dependencies]
emojifinder-core = { path = "../core", version = "0.2.0" }
env_logger = "0.9.0"
exitcode = "1.1.2"
failure = "0.1.8"
indexmap = "1.8.0"
log = "0.4.14"
roxmltree = "0.14.1"
serde = "1.0.136"
