[package]
name = "emojifinder-core"
description = "Common functionality for emojifinder"
version = "0.2.0"
authors = ["Arpad Ray <arraypad@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
failure = "0.1.8"
image = "0.24.2"
lz4 = "1.23.2"
resvg = "0.22.0"
usvg = "0.22.0"
rayon = "1.5.1"
rmp-serde = "1.0.0"
serde = { version = "1.0.102", features = ["rc"] }
serde_derive = "1.0.136"
tiny-skia = "0.6.3"
trigram = "0.4.4"
